--- a/templates/dashboard/your_orders.html
+++ b/templates/dashboard/your_orders.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 {% load static %}
+{% load humanize %}
 
 {% block content %}
 <!-- ========================= SECTION CONTENT ========================= -->
@@ -33,7 +34,7 @@
                                         <tr>
                                             <td class="table-column-1 text-center"><a href="{% url 'view-order' order.key %}">{{ order.key }}@</a></td>
                                             <td class="table-column-1 text-center"><b>{{ order.receiver }}</b></td>
-                                            <td class="table-column-1 text-center"><b>{{ order.must_be_paid }}</b></td>
+                                            <td class="table-column-1 text-center"><b>{{ order.must_be_paid | intcomma:False }}</b></td>
                                             <td class="table-column-1 text-center">
                                                 <span style="font-size: 16px" class="px-2 badge badge-pill {% if order.status == 'delivered' or order.status == 'sent' %}
                                                                                         badge-success
