--- a/templates/store/product.html
+++ b/templates/store/product.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% load static %}
-
+{% load humanize %}
 {% block content %}
     <script>
 
@@ -60,13 +60,12 @@
                         <form method="POST" action="{% url 'take_product' this_product.ID %}" >
                             {% csrf_token %}
                             <article class="content-body">
-
                                 <h2 class="title">{{ this_product }}</h2>
                                 <hr />
                                 <div class="row mb-3">
                                     <div class="col-lg-6 col-md-6 col-12 text-right">
                                         قیمت:
-                                        <var class="price h4">{{ this_product.price }} تومن</var>
+                                        <var class="price h4">{{ this_product.price | intcomma:False }} تومن</var>
                                     </div>
                                     <div dir="rtl" class="col-lg-6 col-md-6 col-12 text-left">
                                         امتیاز:
