bug fixes; admin panel and admin searching section completed; code enhancements; zero stacks keep appearing for no reason bug solved;

--- a/templates/emails/order_verified.html
+++ b/templates/emails/order_verified.html
@@ -13,7 +13,9 @@
     بزودی سفارشت آماده ارسال میشه.
     از لینک زیر می تونی مشخصات کامل و وضعیت ارسال سفارشت رو ببینی:
     <br /> <br />
+    <span style="width:100%; text-align:left" dir="ltr">
     http://{{domain}}{% url 'view-order' order_key=order_key %}
+    </span>
 
 </div>
 {% endautoescape %}
