--- a/templates/emails/reset_password.html
+++ b/templates/emails/reset_password.html
@@ -4,7 +4,9 @@
     <br />
     طی درخواستی که داشتی لینک بازیابی رمزشب رو برات فرستادیم.
     <br /> <br />
+    <span style="width:100%; text-align:left" dir="ltr">
     http://{{domain}}{% url 'reset_password_permission' uidb64=uid token=token %}
+    </span>
     <br /> <br />
     اگر این درخواست از طرف تو نیست و یا اصلا خبر نداری چرا با این ایمیل مواجه شدی؛ صرفا این ایمیل رو نادیده بگیر...
 </div>
