--- a/templates/emails/user_verification.html
+++ b/templates/emails/user_verification.html
@@ -7,7 +7,9 @@
     <br />
     برای شروع فعال سازی برو به لینک زیر و به راحتی حسابتو فعال کن.
     <br /> <br />
-    http://{{domain}}{% url 'activate' uidb64=uid token=token %}
+    <span style="width:100%; text-align:left" dir="ltr">
+    https://{{domain}}{% url 'activate' uidb64=uid token=token %}
+    </span>
     <br /> <br />
     اگر حساب کاربری جدیدی نساختی و حس میکنی درخواست فعال سازی از طرف تو نیست این ایمیل رو نادیده بگیر...
 </div>
