--- a/templates/includes/navigationbar.html
+++ b/templates/includes/navigationbar.html
@@ -8,8 +8,8 @@
           </button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarTop4">
             <ul class="navbar-nav">
-                <li><a href="#" class="nav-link"> <i class="fa fa-envelope"></i> نومه </a></li>
-                <li><a href="#" class="nav-link"> <i class="fa fa-phone"></i> تیلیف </a></li>
+                <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=pheelstyle.ir@gmail.com&su=What's up Dadach?" class="nav-link"> <i class="fa fa-envelope"></i> نومه </a></li>
+                <li><a href="tel:+989036365133" class="nav-link"> <i class="fa fa-phone"></i> تیلیف </a></li>
             </ul> <!-- list-inline //  -->
           </div> <!-- navbar-collapse .// -->
         </div> <!-- container //  -->
