--- a/templates/emails/order_refused.html
+++ b/templates/emails/order_refused.html
@@ -13,7 +13,9 @@
     <br> <br/>
     از لینک زیر می تونی مشخصات کامل سفارشت رو ببینی و مشکلش رو حل کنی:
     <br /> <br />
+    <span style="width:100%; text-align:left" dir="ltr">
     http://{{domain}}{% url 'view-order' order_key=order_key %}
+    </span>
 
 </div>
 {% endautoescape %}
