--- a/pheelstyle/rawstatic/css/style.css
+++ b/pheelstyle/rawstatic/css/style.css
@@ -190,14 +190,32 @@ ul.product-image-thumbnail li img:hover {
     cursor: pointer;
     
 }
-
-@media (max-width: 500px) {
+@media (max-width: 768px) {
     .pheelstyle-banner {
         font-size: 60px;
     }
 }
+
+@media (max-width: 600px) {
+    .pheelstyle-banner {
+        font-size: 50px;
+    }
+}
+
+@media (max-width: 400px) {
+    .pheelstyle-banner {
+        font-size: 40px;
+    }
+
+}
+
+@media (max-width: 360px) {
+    #category-button {
+        display: none;
+    }
+}
 .pheelstyle-banner:hover {
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 .pheelstyle-banner:first-letter {
     font-size: 250%;
