--- a/templates/includes/navigationbar.html
+++ b/templates/includes/navigationbar.html
@@ -26,11 +26,11 @@
     {% endif %}
     <section class="header-main border-bottom">
         <div class="container" >
-            <div id="navigation-box" class="row align-items-center " style="height:150vh; background: url({% static 'images/logo.png' %}) no-repeat center center ;">
-                <a href="/" class="btn btn-primary-light">خونه</a>
-                <div class="col-lg col-sm col-md  col-4 mx-lg-1 flex-grow-0">
-                    <div  dir="ltr" class="category-wrap dropdown d-inline-block float-right">
-                        <button type="button" style="font-weight: bold" class="btn btn-outline-danger dropdown-toggle px-3" data-toggle="dropdown">
+            <div id="navigation-box" class="row align-items-center" style="height:150vh; background: url({% static 'images/logo.png' %}) no-repeat center center ;">
+                <a href="/" class="btn btn-primary-light mx-auto col-5 col-lg col-sm col-md flex-grow-0"> خونه</a>
+                <div id="category-button" class=" col-5 col-lg col-sm col-md mx-auto flex-grow-0 w-100">
+                    <div  dir="ltr" class="category-wrap dropdown d-block float-right w-100">
+                        <button type="button" style="font-weight: bold" class="btn btn-outline-danger dropdown-toggle px-3 w-100" data-toggle="dropdown">
                             <i class="fa fa-bars"></i> همه دسته ها
                         </button>
                         <div class="dropdown-menu">
@@ -43,7 +43,7 @@
                         </div>
                     </div>  <!-- category-wrap.// -->
                 </div> <!-- col.// -->
-                <a href="{% url 'store' %}" class="btn btn-primary" >فروشگاه</a>
+                <a href="{% url 'store' %}" class="btn btn-success mx-auto col-5 col-lg col-sm col-md flex-grow-0" >فروشگاه</a>
                 <div class="mt-3 col-lg col-md-6 col-sm-12 col-12 col">
                     <form action="{% url 'search' %}" method="post" class="search">
                         {% csrf_token %}
@@ -61,7 +61,7 @@
                         </div>
                     </form> <!-- search-wrap .end// -->
                 </div> <!-- col.// -->
-                <div style="border-radius: 1rem;" class="col-lg-3 col-md-4 col-sm-12 col-12 order-2 order-lg-3 p-1">
+                <div style="border-radius: 1rem;" class="col-lg-4 col-md-6 col-sm-12 col-12 order-2 order-lg-3 p-1">
                     <div class="d-flex justify-content-end mb-3 mb-lg-0">
                         <div class="text-right widget-header">
                             {% if user.ID is None %}
